@@ -515,3 +515,7 @@ Other Changes
   Closes #5333
 
 * Fix type hints in class diagrams generated by pyreverse for class methods and methods returning None.
+
+* Output better error message if unsupported file formats are used with ``pyreverse``.
+
+  Closes #5950
